AC_INIT(ChangeLog)

AC_CONFIG_AUX_DIR(config)
CONFIGDIR=${srcdir}/config
AC_SUBST(CONFIGDIR)

PACKAGE=tcllib

MAJOR_VERSION=0
MINOR_VERSION=1
PATCHLEVEL=

VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_PROG_INSTALL
SC_SIMPLE_EXEEXT
SC_PROG_TCLSH

AC_OUTPUT([Makefile \
	mkIndex.tcl])
