AC_INIT(ChangeLog)

case "`uname -s`" in
    *win32* | *WIN32* | *CYGWIN_NT* | *CYGWIN_98* | *CYGWIN_95*)
	CYGPATH="cygpath -w"
	;;
    *)
	CYGPATH=echo
	;;
esac
AC_SUBST(CYGPATH)

SC_SIMPLE_EXEEXT
SC_PROG_TCLSH

# ### ######### ###########################

SAK=`$CYGPATH ${srcdir}/sak.tcl`

PACKAGE=`$TCLSH_PROG "${SAK}" name`
MAJOR_VERSION=`$TCLSH_PROG "${SAK}" major`
MINOR_VERSION=`$TCLSH_PROG "${SAK}" minor`
PATCHLEVEL=""

VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

# ### ######### ###########################

AC_OUTPUT([Makefile])
